# rag-system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  answering.py  config.py  context.py  database.py  llm.py  main.py  models.py  pyproject.toml  retrieval.py  session.py
frontend/: index.html
