[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "groq>=0.13",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.2",
    "uvicorn[standard]>=0.42.0",
]
